--- a/.github/workflows/publish_release.yaml
+++ b/.github/workflows/publish_release.yaml
@@ -10,6 +10,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+      with:
+        ref: ${GITHUB_REF#refs/*/}
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
